parser.output
Grammar

    0 $accept: program $end

    1 program: program '\n' naredba
    2        | naredba

    3 naredba: id_token assign_token expr
    4        | print_token '(' expr ')'
    5        | print_token '(' index ')'
    6        | print_token '(' bool_expr ')'

    7 expr: expr '+' expr
    8     | num_token '*' expr
    9     | expr '*' num_token
   10     | lower_token '(' expr ')'
   11     | rep_token '(' index ',' index ',' expr ',' expr ')'
   12     | upper_token '(' expr ')'
   13     | '(' expr ')'
   14     | reverse_token '(' expr ')'
   15     | center_token '(' num_token ',' expr ',' expr ')'
   16     | id_token
   17     | str_token
   18     | oper

   19 oper: id_token '[' index ':' ']'
   20     | id_token '[' ':' index ']'
   21     | id_token '[' index ':' index ']'

   22 index: index_token '(' expr ',' expr ')'
   23      | num_token
   24      | '|' expr '|'

   25 bool_expr: expr eq_token expr
   26          | expr gt_token expr
   27          | expr lt_token expr
   28          | expr neq_token expr
   29          | expr '<' expr
   30          | expr '>' expr
   31          | islower_token '(' expr ')'
   32          | isupper_token '(' expr ')'
   33          | find_token '(' expr ',' expr ')'
   34          | ignore_token '(' expr ',' expr ')'
   35          | isDigit_token '(' expr ')'
   36          | isSpace_token '(' expr ')'


Terminals, with rules where they appear

    $end (0) 0
    '\n' (10) 1
    '(' (40) 4 5 6 10 11 12 13 14 15 22 31 32 33 34 35 36
    ')' (41) 4 5 6 10 11 12 13 14 15 22 31 32 33 34 35 36
    '*' (42) 8 9
    '+' (43) 7
    ',' (44) 11 15 22 33 34
    ':' (58) 19 20 21
    '<' (60) 29
    '>' (62) 30
    '[' (91) 19 20 21
    ']' (93) 19 20 21
    '|' (124) 24
    error (256)
    num_token <value> (258) 8 9 15 23
    str_token <str> (259) 17
    id_token <id> (260) 3 16 19 20 21
    assign_token (261) 3
    print_token (262) 4 5 6
    index_token (263) 22
    lower_token (264) 10
    upper_token (265) 12
    reverse_token (266) 14
    neq_token (267) 28
    eq_token (268) 25
    lt_token (269) 27
    gt_token (270) 26
    rep_token (271) 11
    islower_token (272) 31
    isupper_token (273) 32
    center_token (274) 15
    find_token (275) 33
    ignore_token (276) 34
    isDigit_token (277) 35
    isSpace_token (278) 36


Nonterminals, with rules where they appear

    $accept (36)
        on left: 0
    program (37)
        on left: 1 2
        on right: 0 1
    naredba (38)
        on left: 3 4 5 6
        on right: 1 2
    expr <strClass> (39)
        on left: 7 8 9 10 11 12 13 14 15 16 17 18
        on right: 3 4 7 8 9 10 11 12 13 14 15 22 24 25 26 27 28 29 30 31 32 33 34 35 36
    oper <strClass> (40)
        on left: 19 20 21
        on right: 18
    index <value> (41)
        on left: 22 23 24
        on right: 5 11 19 20 21
    bool_expr <logicValue> (42)
        on left: 25 26 27 28 29 30 31 32 33 34 35 36
        on right: 6


State 0

    0 $accept: . program $end

    id_token     shift, and go to state 1
    print_token  shift, and go to state 2

    program  go to state 3
    naredba  go to state 4


State 1

    3 naredba: id_token . assign_token expr

    assign_token  shift, and go to state 5


State 2

    4 naredba: print_token . '(' expr ')'
    5        | print_token . '(' index ')'
    6        | print_token . '(' bool_expr ')'

    '('  shift, and go to state 6


State 3

    0 $accept: program . $end
    1 program: program . '\n' naredba

    $end  shift, and go to state 7
    '\n'  shift, and go to state 8


State 4

    2 program: naredba .

    $default  reduce using rule 2 (program)


State 5

    3 naredba: id_token assign_token . expr

    num_token      shift, and go to state 9
    str_token      shift, and go to state 10
    id_token       shift, and go to state 11
    lower_token    shift, and go to state 12
    upper_token    shift, and go to state 13
    reverse_token  shift, and go to state 14
    rep_token      shift, and go to state 15
    center_token   shift, and go to state 16
    '('            shift, and go to state 17

    expr  go to state 18
    oper  go to state 19


State 6

    4 naredba: print_token '(' . expr ')'
    5        | print_token '(' . index ')'
    6        | print_token '(' . bool_expr ')'

    num_token      shift, and go to state 20
    str_token      shift, and go to state 10
    id_token       shift, and go to state 11
    index_token    shift, and go to state 21
    lower_token    shift, and go to state 12
    upper_token    shift, and go to state 13
    reverse_token  shift, and go to state 14
    rep_token      shift, and go to state 15
    islower_token  shift, and go to state 22
    isupper_token  shift, and go to state 23
    center_token   shift, and go to state 16
    find_token     shift, and go to state 24
    ignore_token   shift, and go to state 25
    isDigit_token  shift, and go to state 26
    isSpace_token  shift, and go to state 27
    '('            shift, and go to state 17
    '|'            shift, and go to state 28

    expr       go to state 29
    oper       go to state 19
    index      go to state 30
    bool_expr  go to state 31


State 7

    0 $accept: program $end .

    $default  accept


State 8

    1 program: program '\n' . naredba

    id_token     shift, and go to state 1
    print_token  shift, and go to state 2

    naredba  go to state 32


State 9

    8 expr: num_token . '*' expr

    '*'  shift, and go to state 33


State 10

   17 expr: str_token .

    $default  reduce using rule 17 (expr)


State 11

   16 expr: id_token .
   19 oper: id_token . '[' index ':' ']'
   20     | id_token . '[' ':' index ']'
   21     | id_token . '[' index ':' index ']'

    '['  shift, and go to state 34

    $default  reduce using rule 16 (expr)


State 12

   10 expr: lower_token . '(' expr ')'

    '('  shift, and go to state 35


State 13

   12 expr: upper_token . '(' expr ')'

    '('  shift, and go to state 36


State 14

   14 expr: reverse_token . '(' expr ')'

    '('  shift, and go to state 37


State 15

   11 expr: rep_token . '(' index ',' index ',' expr ',' expr ')'

    '('  shift, and go to state 38


State 16

   15 expr: center_token . '(' num_token ',' expr ',' expr ')'

    '('  shift, and go to state 39


State 17

   13 expr: '(' . expr ')'

    num_token      shift, and go to state 9
    str_token      shift, and go to state 10
    id_token       shift, and go to state 11
    lower_token    shift, and go to state 12
    upper_token    shift, and go to state 13
    reverse_token  shift, and go to state 14
    rep_token      shift, and go to state 15
    center_token   shift, and go to state 16
    '('            shift, and go to state 17

    expr  go to state 40
    oper  go to state 19


State 18

    3 naredba: id_token assign_token expr .
    7 expr: expr . '+' expr
    9     | expr . '*' num_token

    '+'  shift, and go to state 41
    '*'  shift, and go to state 42

    $default  reduce using rule 3 (naredba)


State 19

   18 expr: oper .

    $default  reduce using rule 18 (expr)


State 20

    8 expr: num_token . '*' expr
   23 index: num_token .

    '*'  shift, and go to state 33

    $default  reduce using rule 23 (index)


State 21

   22 index: index_token . '(' expr ',' expr ')'

    '('  shift, and go to state 43


State 22

   31 bool_expr: islower_token . '(' expr ')'

    '('  shift, and go to state 44


State 23

   32 bool_expr: isupper_token . '(' expr ')'

    '('  shift, and go to state 45


State 24

   33 bool_expr: find_token . '(' expr ',' expr ')'

    '('  shift, and go to state 46


State 25

   34 bool_expr: ignore_token . '(' expr ',' expr ')'

    '('  shift, and go to state 47


State 26

   35 bool_expr: isDigit_token . '(' expr ')'

    '('  shift, and go to state 48


State 27

   36 bool_expr: isSpace_token . '(' expr ')'

    '('  shift, and go to state 49


State 28

   24 index: '|' . expr '|'

    num_token      shift, and go to state 9
    str_token      shift, and go to state 10
    id_token       shift, and go to state 11
    lower_token    shift, and go to state 12
    upper_token    shift, and go to state 13
    reverse_token  shift, and go to state 14
    rep_token      shift, and go to state 15
    center_token   shift, and go to state 16
    '('            shift, and go to state 17

    expr  go to state 50
    oper  go to state 19


State 29

    4 naredba: print_token '(' expr . ')'
    7 expr: expr . '+' expr
    9     | expr . '*' num_token
   25 bool_expr: expr . eq_token expr
   26          | expr . gt_token expr
   27          | expr . lt_token expr
   28          | expr . neq_token expr
   29          | expr . '<' expr
   30          | expr . '>' expr

    '+'        shift, and go to state 41
    '*'        shift, and go to state 42
    neq_token  shift, and go to state 51
    eq_token   shift, and go to state 52
    lt_token   shift, and go to state 53
    gt_token   shift, and go to state 54
    ')'        shift, and go to state 55
    '<'        shift, and go to state 56
    '>'        shift, and go to state 57


State 30

    5 naredba: print_token '(' index . ')'

    ')'  shift, and go to state 58


State 31

    6 naredba: print_token '(' bool_expr . ')'

    ')'  shift, and go to state 59


State 32

    1 program: program '\n' naredba .

    $default  reduce using rule 1 (program)


State 33

    8 expr: num_token '*' . expr

    num_token      shift, and go to state 9
    str_token      shift, and go to state 10
    id_token       shift, and go to state 11
    lower_token    shift, and go to state 12
    upper_token    shift, and go to state 13
    reverse_token  shift, and go to state 14
    rep_token      shift, and go to state 15
    center_token   shift, and go to state 16
    '('            shift, and go to state 17

    expr  go to state 60
    oper  go to state 19


State 34

   19 oper: id_token '[' . index ':' ']'
   20     | id_token '[' . ':' index ']'
   21     | id_token '[' . index ':' index ']'

    num_token    shift, and go to state 61
    index_token  shift, and go to state 21
    ':'          shift, and go to state 62
    '|'          shift, and go to state 28

    index  go to state 63


State 35

   10 expr: lower_token '(' . expr ')'

    num_token      shift, and go to state 9
    str_token      shift, and go to state 10
    id_token       shift, and go to state 11
    lower_token    shift, and go to state 12
    upper_token    shift, and go to state 13
    reverse_token  shift, and go to state 14
    rep_token      shift, and go to state 15
    center_token   shift, and go to state 16
    '('            shift, and go to state 17

    expr  go to state 64
    oper  go to state 19


State 36

   12 expr: upper_token '(' . expr ')'

    num_token      shift, and go to state 9
    str_token      shift, and go to state 10
    id_token       shift, and go to state 11
    lower_token    shift, and go to state 12
    upper_token    shift, and go to state 13
    reverse_token  shift, and go to state 14
    rep_token      shift, and go to state 15
    center_token   shift, and go to state 16
    '('            shift, and go to state 17

    expr  go to state 65
    oper  go to state 19


State 37

   14 expr: reverse_token '(' . expr ')'

    num_token      shift, and go to state 9
    str_token      shift, and go to state 10
    id_token       shift, and go to state 11
    lower_token    shift, and go to state 12
    upper_token    shift, and go to state 13
    reverse_token  shift, and go to state 14
    rep_token      shift, and go to state 15
    center_token   shift, and go to state 16
    '('            shift, and go to state 17

    expr  go to state 66
    oper  go to state 19


State 38

   11 expr: rep_token '(' . index ',' index ',' expr ',' expr ')'

    num_token    shift, and go to state 61
    index_token  shift, and go to state 21
    '|'          shift, and go to state 28

    index  go to state 67


State 39

   15 expr: center_token '(' . num_token ',' expr ',' expr ')'

    num_token  shift, and go to state 68


State 40

    7 expr: expr . '+' expr
    9     | expr . '*' num_token
   13     | '(' expr . ')'

    '+'  shift, and go to state 41
    '*'  shift, and go to state 42
    ')'  shift, and go to state 69


State 41

    7 expr: expr '+' . expr

    num_token      shift, and go to state 9
    str_token      shift, and go to state 10
    id_token       shift, and go to state 11
    lower_token    shift, and go to state 12
    upper_token    shift, and go to state 13
    reverse_token  shift, and go to state 14
    rep_token      shift, and go to state 15
    center_token   shift, and go to state 16
    '('            shift, and go to state 17

    expr  go to state 70
    oper  go to state 19


State 42

    9 expr: expr '*' . num_token

    num_token  shift, and go to state 71


State 43

   22 index: index_token '(' . expr ',' expr ')'

    num_token      shift, and go to state 9
    str_token      shift, and go to state 10
    id_token       shift, and go to state 11
    lower_token    shift, and go to state 12
    upper_token    shift, and go to state 13
    reverse_token  shift, and go to state 14
    rep_token      shift, and go to state 15
    center_token   shift, and go to state 16
    '('            shift, and go to state 17

    expr  go to state 72
    oper  go to state 19


State 44

   31 bool_expr: islower_token '(' . expr ')'

    num_token      shift, and go to state 9
    str_token      shift, and go to state 10
    id_token       shift, and go to state 11
    lower_token    shift, and go to state 12
    upper_token    shift, and go to state 13
    reverse_token  shift, and go to state 14
    rep_token      shift, and go to state 15
    center_token   shift, and go to state 16
    '('            shift, and go to state 17

    expr  go to state 73
    oper  go to state 19


State 45

   32 bool_expr: isupper_token '(' . expr ')'

    num_token      shift, and go to state 9
    str_token      shift, and go to state 10
    id_token       shift, and go to state 11
    lower_token    shift, and go to state 12
    upper_token    shift, and go to state 13
    reverse_token  shift, and go to state 14
    rep_token      shift, and go to state 15
    center_token   shift, and go to state 16
    '('            shift, and go to state 17

    expr  go to state 74
    oper  go to state 19


State 46

   33 bool_expr: find_token '(' . expr ',' expr ')'

    num_token      shift, and go to state 9
    str_token      shift, and go to state 10
    id_token       shift, and go to state 11
    lower_token    shift, and go to state 12
    upper_token    shift, and go to state 13
    reverse_token  shift, and go to state 14
    rep_token      shift, and go to state 15
    center_token   shift, and go to state 16
    '('            shift, and go to state 17

    expr  go to state 75
    oper  go to state 19


State 47

   34 bool_expr: ignore_token '(' . expr ',' expr ')'

    num_token      shift, and go to state 9
    str_token      shift, and go to state 10
    id_token       shift, and go to state 11
    lower_token    shift, and go to state 12
    upper_token    shift, and go to state 13
    reverse_token  shift, and go to state 14
    rep_token      shift, and go to state 15
    center_token   shift, and go to state 16
    '('            shift, and go to state 17

    expr  go to state 76
    oper  go to state 19


State 48

   35 bool_expr: isDigit_token '(' . expr ')'

    num_token      shift, and go to state 9
    str_token      shift, and go to state 10
    id_token       shift, and go to state 11
    lower_token    shift, and go to state 12
    upper_token    shift, and go to state 13
    reverse_token  shift, and go to state 14
    rep_token      shift, and go to state 15
    center_token   shift, and go to state 16
    '('            shift, and go to state 17

    expr  go to state 77
    oper  go to state 19


State 49

   36 bool_expr: isSpace_token '(' . expr ')'

    num_token      shift, and go to state 9
    str_token      shift, and go to state 10
    id_token       shift, and go to state 11
    lower_token    shift, and go to state 12
    upper_token    shift, and go to state 13
    reverse_token  shift, and go to state 14
    rep_token      shift, and go to state 15
    center_token   shift, and go to state 16
    '('            shift, and go to state 17

    expr  go to state 78
    oper  go to state 19


State 50

    7 expr: expr . '+' expr
    9     | expr . '*' num_token
   24 index: '|' expr . '|'

    '+'  shift, and go to state 41
    '*'  shift, and go to state 42
    '|'  shift, and go to state 79


State 51

   28 bool_expr: expr neq_token . expr

    num_token      shift, and go to state 9
    str_token      shift, and go to state 10
    id_token       shift, and go to state 11
    lower_token    shift, and go to state 12
    upper_token    shift, and go to state 13
    reverse_token  shift, and go to state 14
    rep_token      shift, and go to state 15
    center_token   shift, and go to state 16
    '('            shift, and go to state 17

    expr  go to state 80
    oper  go to state 19


State 52

   25 bool_expr: expr eq_token . expr

    num_token      shift, and go to state 9
    str_token      shift, and go to state 10
    id_token       shift, and go to state 11
    lower_token    shift, and go to state 12
    upper_token    shift, and go to state 13
    reverse_token  shift, and go to state 14
    rep_token      shift, and go to state 15
    center_token   shift, and go to state 16
    '('            shift, and go to state 17

    expr  go to state 81
    oper  go to state 19


State 53

   27 bool_expr: expr lt_token . expr

    num_token      shift, and go to state 9
    str_token      shift, and go to state 10
    id_token       shift, and go to state 11
    lower_token    shift, and go to state 12
    upper_token    shift, and go to state 13
    reverse_token  shift, and go to state 14
    rep_token      shift, and go to state 15
    center_token   shift, and go to state 16
    '('            shift, and go to state 17

    expr  go to state 82
    oper  go to state 19


State 54

   26 bool_expr: expr gt_token . expr

    num_token      shift, and go to state 9
    str_token      shift, and go to state 10
    id_token       shift, and go to state 11
    lower_token    shift, and go to state 12
    upper_token    shift, and go to state 13
    reverse_token  shift, and go to state 14
    rep_token      shift, and go to state 15
    center_token   shift, and go to state 16
    '('            shift, and go to state 17

    expr  go to state 83
    oper  go to state 19


State 55

    4 naredba: print_token '(' expr ')' .

    $default  reduce using rule 4 (naredba)


State 56

   29 bool_expr: expr '<' . expr

    num_token      shift, and go to state 9
    str_token      shift, and go to state 10
    id_token       shift, and go to state 11
    lower_token    shift, and go to state 12
    upper_token    shift, and go to state 13
    reverse_token  shift, and go to state 14
    rep_token      shift, and go to state 15
    center_token   shift, and go to state 16
    '('            shift, and go to state 17

    expr  go to state 84
    oper  go to state 19


State 57

   30 bool_expr: expr '>' . expr

    num_token      shift, and go to state 9
    str_token      shift, and go to state 10
    id_token       shift, and go to state 11
    lower_token    shift, and go to state 12
    upper_token    shift, and go to state 13
    reverse_token  shift, and go to state 14
    rep_token      shift, and go to state 15
    center_token   shift, and go to state 16
    '('            shift, and go to state 17

    expr  go to state 85
    oper  go to state 19


State 58

    5 naredba: print_token '(' index ')' .

    $default  reduce using rule 5 (naredba)


State 59

    6 naredba: print_token '(' bool_expr ')' .

    $default  reduce using rule 6 (naredba)


State 60

    7 expr: expr . '+' expr
    8     | num_token '*' expr .
    9     | expr . '*' num_token

    $default  reduce using rule 8 (expr)


State 61

   23 index: num_token .

    $default  reduce using rule 23 (index)


State 62

   20 oper: id_token '[' ':' . index ']'

    num_token    shift, and go to state 61
    index_token  shift, and go to state 21
    '|'          shift, and go to state 28

    index  go to state 86


State 63

   19 oper: id_token '[' index . ':' ']'
   21     | id_token '[' index . ':' index ']'

    ':'  shift, and go to state 87


State 64

    7 expr: expr . '+' expr
    9     | expr . '*' num_token
   10     | lower_token '(' expr . ')'

    '+'  shift, and go to state 41
    '*'  shift, and go to state 42
    ')'  shift, and go to state 88


State 65

    7 expr: expr . '+' expr
    9     | expr . '*' num_token
   12     | upper_token '(' expr . ')'

    '+'  shift, and go to state 41
    '*'  shift, and go to state 42
    ')'  shift, and go to state 89


State 66

    7 expr: expr . '+' expr
    9     | expr . '*' num_token
   14     | reverse_token '(' expr . ')'

    '+'  shift, and go to state 41
    '*'  shift, and go to state 42
    ')'  shift, and go to state 90


State 67

   11 expr: rep_token '(' index . ',' index ',' expr ',' expr ')'

    ','  shift, and go to state 91


State 68

   15 expr: center_token '(' num_token . ',' expr ',' expr ')'

    ','  shift, and go to state 92


State 69

   13 expr: '(' expr ')' .

    $default  reduce using rule 13 (expr)


State 70

    7 expr: expr . '+' expr
    7     | expr '+' expr .
    9     | expr . '*' num_token

    '*'  shift, and go to state 42

    $default  reduce using rule 7 (expr)


State 71

    9 expr: expr '*' num_token .

    $default  reduce using rule 9 (expr)


State 72

    7 expr: expr . '+' expr
    9     | expr . '*' num_token
   22 index: index_token '(' expr . ',' expr ')'

    '+'  shift, and go to state 41
    '*'  shift, and go to state 42
    ','  shift, and go to state 93


State 73

    7 expr: expr . '+' expr
    9     | expr . '*' num_token
   31 bool_expr: islower_token '(' expr . ')'

    '+'  shift, and go to state 41
    '*'  shift, and go to state 42
    ')'  shift, and go to state 94


State 74

    7 expr: expr . '+' expr
    9     | expr . '*' num_token
   32 bool_expr: isupper_token '(' expr . ')'

    '+'  shift, and go to state 41
    '*'  shift, and go to state 42
    ')'  shift, and go to state 95


State 75

    7 expr: expr . '+' expr
    9     | expr . '*' num_token
   33 bool_expr: find_token '(' expr . ',' expr ')'

    '+'  shift, and go to state 41
    '*'  shift, and go to state 42
    ','  shift, and go to state 96


State 76

    7 expr: expr . '+' expr
    9     | expr . '*' num_token
   34 bool_expr: ignore_token '(' expr . ',' expr ')'

    '+'  shift, and go to state 41
    '*'  shift, and go to state 42
    ','  shift, and go to state 97


State 77

    7 expr: expr . '+' expr
    9     | expr . '*' num_token
   35 bool_expr: isDigit_token '(' expr . ')'

    '+'  shift, and go to state 41
    '*'  shift, and go to state 42
    ')'  shift, and go to state 98


State 78

    7 expr: expr . '+' expr
    9     | expr . '*' num_token
   36 bool_expr: isSpace_token '(' expr . ')'

    '+'  shift, and go to state 41
    '*'  shift, and go to state 42
    ')'  shift, and go to state 99


State 79

   24 index: '|' expr '|' .

    $default  reduce using rule 24 (index)


State 80

    7 expr: expr . '+' expr
    9     | expr . '*' num_token
   28 bool_expr: expr neq_token expr .

    '+'  shift, and go to state 41
    '*'  shift, and go to state 42

    $default  reduce using rule 28 (bool_expr)


State 81

    7 expr: expr . '+' expr
    9     | expr . '*' num_token
   25 bool_expr: expr eq_token expr .

    '+'  shift, and go to state 41
    '*'  shift, and go to state 42

    $default  reduce using rule 25 (bool_expr)


State 82

    7 expr: expr . '+' expr
    9     | expr . '*' num_token
   27 bool_expr: expr lt_token expr .

    '+'  shift, and go to state 41
    '*'  shift, and go to state 42

    $default  reduce using rule 27 (bool_expr)


State 83

    7 expr: expr . '+' expr
    9     | expr . '*' num_token
   26 bool_expr: expr gt_token expr .

    '+'  shift, and go to state 41
    '*'  shift, and go to state 42

    $default  reduce using rule 26 (bool_expr)


State 84

    7 expr: expr . '+' expr
    9     | expr . '*' num_token
   29 bool_expr: expr '<' expr .

    '+'  shift, and go to state 41
    '*'  shift, and go to state 42

    $default  reduce using rule 29 (bool_expr)


State 85

    7 expr: expr . '+' expr
    9     | expr . '*' num_token
   30 bool_expr: expr '>' expr .

    '+'  shift, and go to state 41
    '*'  shift, and go to state 42

    $default  reduce using rule 30 (bool_expr)


State 86

   20 oper: id_token '[' ':' index . ']'

    ']'  shift, and go to state 100


State 87

   19 oper: id_token '[' index ':' . ']'
   21     | id_token '[' index ':' . index ']'

    num_token    shift, and go to state 61
    index_token  shift, and go to state 21
    ']'          shift, and go to state 101
    '|'          shift, and go to state 28

    index  go to state 102


State 88

   10 expr: lower_token '(' expr ')' .

    $default  reduce using rule 10 (expr)


State 89

   12 expr: upper_token '(' expr ')' .

    $default  reduce using rule 12 (expr)


State 90

   14 expr: reverse_token '(' expr ')' .

    $default  reduce using rule 14 (expr)


State 91

   11 expr: rep_token '(' index ',' . index ',' expr ',' expr ')'

    num_token    shift, and go to state 61
    index_token  shift, and go to state 21
    '|'          shift, and go to state 28

    index  go to state 103


State 92

   15 expr: center_token '(' num_token ',' . expr ',' expr ')'

    num_token      shift, and go to state 9
    str_token      shift, and go to state 10
    id_token       shift, and go to state 11
    lower_token    shift, and go to state 12
    upper_token    shift, and go to state 13
    reverse_token  shift, and go to state 14
    rep_token      shift, and go to state 15
    center_token   shift, and go to state 16
    '('            shift, and go to state 17

    expr  go to state 104
    oper  go to state 19


State 93

   22 index: index_token '(' expr ',' . expr ')'

    num_token      shift, and go to state 9
    str_token      shift, and go to state 10
    id_token       shift, and go to state 11
    lower_token    shift, and go to state 12
    upper_token    shift, and go to state 13
    reverse_token  shift, and go to state 14
    rep_token      shift, and go to state 15
    center_token   shift, and go to state 16
    '('            shift, and go to state 17

    expr  go to state 105
    oper  go to state 19


State 94

   31 bool_expr: islower_token '(' expr ')' .

    $default  reduce using rule 31 (bool_expr)


State 95

   32 bool_expr: isupper_token '(' expr ')' .

    $default  reduce using rule 32 (bool_expr)


State 96

   33 bool_expr: find_token '(' expr ',' . expr ')'

    num_token      shift, and go to state 9
    str_token      shift, and go to state 10
    id_token       shift, and go to state 11
    lower_token    shift, and go to state 12
    upper_token    shift, and go to state 13
    reverse_token  shift, and go to state 14
    rep_token      shift, and go to state 15
    center_token   shift, and go to state 16
    '('            shift, and go to state 17

    expr  go to state 106
    oper  go to state 19


State 97

   34 bool_expr: ignore_token '(' expr ',' . expr ')'

    num_token      shift, and go to state 9
    str_token      shift, and go to state 10
    id_token       shift, and go to state 11
    lower_token    shift, and go to state 12
    upper_token    shift, and go to state 13
    reverse_token  shift, and go to state 14
    rep_token      shift, and go to state 15
    center_token   shift, and go to state 16
    '('            shift, and go to state 17

    expr  go to state 107
    oper  go to state 19


State 98

   35 bool_expr: isDigit_token '(' expr ')' .

    $default  reduce using rule 35 (bool_expr)


State 99

   36 bool_expr: isSpace_token '(' expr ')' .

    $default  reduce using rule 36 (bool_expr)


State 100

   20 oper: id_token '[' ':' index ']' .

    $default  reduce using rule 20 (oper)


State 101

   19 oper: id_token '[' index ':' ']' .

    $default  reduce using rule 19 (oper)


State 102

   21 oper: id_token '[' index ':' index . ']'

    ']'  shift, and go to state 108


State 103

   11 expr: rep_token '(' index ',' index . ',' expr ',' expr ')'

    ','  shift, and go to state 109


State 104

    7 expr: expr . '+' expr
    9     | expr . '*' num_token
   15     | center_token '(' num_token ',' expr . ',' expr ')'

    '+'  shift, and go to state 41
    '*'  shift, and go to state 42
    ','  shift, and go to state 110


State 105

    7 expr: expr . '+' expr
    9     | expr . '*' num_token
   22 index: index_token '(' expr ',' expr . ')'

    '+'  shift, and go to state 41
    '*'  shift, and go to state 42
    ')'  shift, and go to state 111


State 106

    7 expr: expr . '+' expr
    9     | expr . '*' num_token
   33 bool_expr: find_token '(' expr ',' expr . ')'

    '+'  shift, and go to state 41
    '*'  shift, and go to state 42
    ')'  shift, and go to state 112


State 107

    7 expr: expr . '+' expr
    9     | expr . '*' num_token
   34 bool_expr: ignore_token '(' expr ',' expr . ')'

    '+'  shift, and go to state 41
    '*'  shift, and go to state 42
    ')'  shift, and go to state 113


State 108

   21 oper: id_token '[' index ':' index ']' .

    $default  reduce using rule 21 (oper)


State 109

   11 expr: rep_token '(' index ',' index ',' . expr ',' expr ')'
